syntax = "proto3";
package auth;

option go_package = "github.com/diplom/auth-service/proto";

service AuthService {
    rpc ValidateToken (TokenRequest) returns (TokenResponse);
}

message TokenRequest {
    string token = 1;
}

message TokenResponse {
    bool valid = 1;
    string user_id = 2;
    string role = 3;
}
